tests/errors/self_block_top_level.dang
# Test: a self { } block is only valid inside a type body.
self {
  foo(): Int! { 1 }
}
